--- a/res/css/views/rooms/_IRCLayout.scss
+++ b/res/css/views/rooms/_IRCLayout.scss
@@ -24,6 +24,8 @@ $irc-line-height: $font-18px;
     line-height: $irc-line-height !important;
 
     .mx_EventTile {
+        --EventTile_irc_line-padding-block: 1px;
+
         // timestamps are links which shouldn't be underlined
         > a {
             text-decoration: none;
@@ -132,7 +134,7 @@ $irc-line-height: $font-18px;
             .mx_MTextBody {
                 display: inline-block;
                 // add a 1px padding top and bottom because our larger emoji font otherwise gets cropped by anti-zalgo
-                padding: 1px 0;
+                padding: var(--EventTile_irc_line-padding-block) 0;
             }
 
             .mx_ReplyTile {
